--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -14,3 +14,21 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
 server.port=8080
+
+# Debug Configuration
+logging.level.org.springframework=DEBUG
+logging.level.com.wilson.order=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Error Handling
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
+server.error.include-exception=true
