--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -2,10 +2,11 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'jacoco'
 }
 
 group = 'com.wilson'
-version = '1.0-SNAPSHOT'
+version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
@@ -24,6 +25,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'org.postgresql:postgresql'
 	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
 	compileOnly 'org.projectlombok:lombok'
@@ -33,4 +38,14 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = false
+		csv.required = false
+		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+	}
 }
