--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# H2 Console Configuration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 # Server Configuration
 server.port=8080
 
