--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -34,11 +34,13 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
+	systemProperty 'spring.profiles.active', 'test'
 }
 
 jacocoTestReport {
