--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=stock
 
 # Configuración de PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=newuser
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA/Hibernate
