Adding test coverge and documentation

--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -48,6 +48,6 @@ jacocoTestReport {
 	reports {
 		xml.required = false
 		csv.required = false
-		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+		html.outputLocation = file("${project.rootDir}/coverage/html")
 	}
 }
