--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -22,3 +22,9 @@ logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
 # Configuración del servidor
 server.port=8080
+
+# Configuración de RabbitMQ
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
