--- a/stock/src/test/resources/application-test.properties
+++ b/stock/src/test/resources/application-test.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Configuración del servidor
 server.port=8080
+
+# RabbitMQ Configuration
+app.rabbitmq.queue=stock_queue
