--- a/stock/settings.gradle
+++ b/stock/settings.gradle
@@ -1,7 +1,9 @@
 pluginManagement {
-	repositories {
-		maven { url 'https://repo.spring.io/milestone' }
-		gradlePluginPortal()
-	}
+    repositories {
+        maven { url 'https://repo.spring.io/milestone' }
+        gradlePluginPortal()
+    }
 }
 rootProject.name = 'stock'
+include ':common'
+project(':common').projectDir = file('../common')
