--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,24 +8,25 @@ plugins {
 group = 'com.itm.edu'
 version = '1.0.0'
 
+java {
+    sourceCompatibility = '17'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     // Lombok para compilación y anotaciones
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 publishing {
     publications {
-        commonDto(MavenPublication) {
+        mavenJava(MavenPublication) {
             from components.java
-            artifactId = 'common-dto'
+            artifactId = 'common'
         }
-    }
-    repositories {
-        maven { url = uri('https://jitpack.io') }
     }
 }
