--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -24,6 +24,12 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.template.exchange=order.exchange
+spring.rabbitmq.template.routing-key=order.key
+spring.rabbitmq.template.default-receive-queue=order.queue
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.template.mandatory=true
 
 # Debug Configuration
 logging.level.org.springframework=DEBUG
