--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -24,6 +24,9 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.listener.simple.queues=order.queue
 spring.rabbitmq.listener.simple.routing-key=order.key
+spring.rabbitmq.template.exchange=order.exchange
+spring.rabbitmq.template.routing-key=order.key
+spring.rabbitmq.template.default-receive-queue=order.queue
 
 # Debug Configuration
 logging.level.org.springframework=DEBUG
