--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -48,3 +48,6 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always
 server.error.include-exception=true
+
+# Swagger Configuration
+springdoc.swagger-ui.path=/swagger-order
