--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -39,3 +39,6 @@ logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Swagger Configuration
+springdoc.swagger-ui.path=/swagger-stock
