chore: configuración de sonarqube

--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'jacoco'
 	id 'maven-publish'
+	id "org.sonarqube" version "4.4.1.3373"
 }
 
 group = 'com.itm.edu'
@@ -70,12 +71,63 @@ tasks.named('test') {
 	systemProperty 'spring.profiles.active', 'test'
 }
 
+def sonarProperties = new Properties()
+file("sonar.properties").withInputStream { sonarProperties.load(it) }
+
+sonar {
+	properties {
+		property "sonar.projectKey", "stock-service-itm"
+		property "sonar.projectName", "Microservicio de Stock ITM"
+		property "sonar.host.url", "http://localhost:9000"
+		property "sonar.login", sonarProperties.getProperty("sonar.token")
+		property "sonar.sources", "src/main/java"
+		property "sonar.tests", "src/test/java"
+		property "sonar.java.binaries", "build/classes/java/main"
+		property "sonar.java.test.binaries", "build/classes/java/test"
+		property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+		property "sonar.gradle.skipCompile", "true"
+		property "sonar.sourceEncoding", "UTF-8"
+		property "sonar.scm.disabled", "true"
+		property "sonar.exclusions", "**/common/**/*"
+		property "sonar.java.source", "17"
+	}
+}
+
+jacoco {
+	toolVersion = "0.8.9"
+}
+
 jacocoTestReport {
 	dependsOn test
 	reports {
-		xml.required = false
-		csv.required = false
-		html.outputLocation = file("${project.rootDir}/coverage/html")
+		xml {
+			required = true
+			destination = file("${project.projectDir}/coverage/jacocoTestReport.xml")
+		}
+		html {
+			required = true
+			destination = file("${project.projectDir}/coverage/html")
+		}
+	}
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+				'**/config/**',
+				'**/dto/**',
+				'**/exception/**',
+				'**/StockApplication.class'
+			])
+		}))
+	}
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.80
+			}
+		}
 	}
 }
 
