--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -31,6 +31,25 @@ spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
 
+# RabbitMQ Queue Configuration
+rabbitmq.queues.stock-request=stock.request.queue
+rabbitmq.queues.stock-response=stock.response.queue
+rabbitmq.queues.payment-request=payment.request.queue
+rabbitmq.queues.payment-response=payment.response.queue
+rabbitmq.queues.notification=notification.queue
+
+# RabbitMQ Exchange Configuration
+rabbitmq.exchange.stock=stock.exchange
+rabbitmq.exchange.payment=payment.exchange
+rabbitmq.exchange.notification=notification.exchange
+
+# RabbitMQ Routing Keys
+rabbitmq.routing-keys.stock-request=stock.request.key
+rabbitmq.routing-keys.stock-response=stock.response.key
+rabbitmq.routing-keys.payment-request=payment.request.key
+rabbitmq.routing-keys.payment-response=payment.response.key
+rabbitmq.routing-keys.notification=notification.key
+
 # RabbitMQ Listener Configuration
 spring.rabbitmq.listener.simple.retry.enabled=true
 spring.rabbitmq.listener.simple.retry.initial-interval=1000
