--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -42,3 +42,4 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} -
 
 # Swagger Configuration
 springdoc.swagger-ui.path=/swagger-stock
+swagger.server.url=${SWAGGER_SERVER_URL:http://localhost}
