--- a/order/docker-compose.yml
+++ b/order/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - SPRING_RABBITMQ_PORT=5672
       - SPRING_RABBITMQ_USERNAME=guest
       - SPRING_RABBITMQ_PASSWORD=guest
-      - SWAGGER_SERVER_URL=http://181.131.27.230
+      - SWAGGER_SERVER_URL=${SWAGGER_SERVER_URL}
     networks:
       - order-network
       - microservices-network
