update swagger ip

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -77,4 +77,4 @@ server.error.include-exception=true
 
 # Swagger Configuration
 springdoc.swagger-ui.path=/swagger-order
-swagger.server.url=${SWAGGER_SERVER_URL}
+swagger.server.url=${SWAGGER_SERVER_URL:http://localhost}
