--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.h2.console.path=/h2-console
 server.port=8080
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.host=${RABBITMQ_HOST:rabbitmq}
 spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
