--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -59,6 +59,8 @@ spring.rabbitmq.listener.simple.retry.multiplier=2.0
 
 # Debug Configuration
 logging.level.org.springframework=DEBUG
+logging.level.org.springframework.amqp=TRACE
+logging.level.org.springframework.amqp.rabbit=TRACE
 logging.level.com.itm.edu.order=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -74,6 +76,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always
 server.error.include-exception=true
+server.error.whitelabel.enabled=false
 
 # Swagger Configuration
 springdoc.swagger-ui.path=/swagger-order
